changed selectRandom div to a button

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
     </nav>
     <a href="#" id="tapeName"></a>
     <canvas class="webgl"></canvas>
-    <div id="selectRandom">Select Random</div>
+    <button id="selectRandom">Select Random</button>
 </body>
 </html>
