--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <a href="#" id="tapeName"></a>
     <canvas class="webgl"></canvas>
     <button id="selectRandom">Select Random</button>
+    <script src="js/three.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
