--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -17,5 +18,8 @@
     <a href="#" id="tapeName"></a>
     <canvas class="webgl"></canvas>
     <button id="selectRandom">Select Random</button>
+    <script src="src/three.min.js"></script>
+    <script src="src/data.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
