clean up and attempt to add orbitcontrols

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <canvas class="webgl"></canvas>
     <button id="selectRandom">Select Random</button>
     <script src="src/three.min.js"></script>
+    <script src="src/OrbitControls.js"></script>
     <script src="src/data.js"></script>
     <script src="src/script.js"></script>
 </body>
